--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 				<div class="social">
 					<h3><strong>Connect With Me</strong></h3>
 					<hr class="smallLine">
-					<a href="Github" target="_blank">
+					<a href="https://github.com/elisreal" target="_blank">
 						<img class="icon" src="assets/images/github.png" alt="Github">
 					</a>
-					<a href="Linkedin" target="_blank">
+					<a href="https://www.linkedin.com/in/eliud-arbelo-ii-4b7b2989" target="_blank">
 						<img class="icon" src="assets/images/linkedin.png" alt="linkedin">
 					</a>
-					<a href="Stackoverflow" target="_blank">
+					<a href="https://stackoverflow.com/users/8322327/eliud-arbelo" target="_blank">
 						<img class="icon" src="assets/images/stack.png" alt="Stackoverflow">
 					</a>
 				</div>
