Changes to portfolio and css

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,51 +51,51 @@
 					<h2><strong>Portfolio</strong></h2>
 					<hr class="bigLine">
 						<div class="row">
-							<div class="col-sm-6">
-							<div class="label">
+							<div class="col-sm-6 col-xs-12">
+								<div class="label">
 									<h4 class="text-center">Hangman</h4>
 								</div>
 								<div class="imgContainer">
-									<img class="photos" src="assets/images/ipad.jpg" alt="*Title*">
+									<img class="photos" src="assets/images/ipad.jpg" alt="Hangman">
 								</div>
 							</div>
-							<div class="col-sm-6">
-							<div class="label">
+							<div class="col-sm-6 col-xs-12">
+								<div class="label">
 									<h4 class="text-center">RPG Game</h4>
 								</div>
 								<div class="imgContainer">
-									<img class="photos" src="assets/images/turntable.jpg" alt="*Title*">
+									<img class="photos" src="assets/images/turntable.jpg" alt="RPG Game">
 								</div>
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-sm-6">
+							<div class="col-sm-6 col-xs-12">
 								<div class="label">
 									<h4 class="text-center">Trivia Game</h4>
 								</div>
 								<div class="imgContainer">
-									<img class="photos" src="assets/images/ipod.jpg" alt="*Title*">
+									<img class="photos" src="assets/images/ipod.jpg" alt="Trivia Game">
 								</div>
 							</div>
-							<div class="col-sm-6">
+							<div class="col-sm-6 col-xs-12">
 								<div class="label">
 									<h4 class="text-center">Rutgers Info Widget</h4>
 								</div>
 								<div class="imgContainer">
-									<img class="photos" src="assets/images/headphones.jpg" alt="*Title*">
+									<img class="photos" src="assets/images/headphones.jpg" alt="Rutgers Info Widget">
 								</div>
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-sm-6">
+							<div class="col-sm-6 col-xs-12">
 								<div class="label">
 									<h4 class="text-center">Rock Paper Scissors</h4>
 								</div>
 								<div class="imgContainer">
-									<img class="photos" src="assets/images/TV.jpg" alt="*Title*">
+									<img class="photos" src="assets/images/TV.jpg" alt="Rock Paper Scissors">
 								</div>
 							</div>
-							<div class="col-sm-6">
+							<div class="col-sm-6 col-xs-12">
 								
 							</div>
 						</div>
