--- a/contact.html
+++ b/contact.html
@@ -37,9 +37,9 @@
 				</div>
 				<div class="col-md-6">
 					<div class="menu">
-						<a class="text-center link" href="index.html" target="">About</a>
-						<a class="text-center link" href="portfolio.html" target="">Portfolio</a>
-						<a class="text-center link" href="contact.html" target="">Contact</a>
+						<a class="text-center link" href="index.html" target="_self">About</a>
+						<a class="text-center link" href="portfolio.html" target="_self">Portfolio</a>
+						<a class="text-center link" href="contact.html" target="_self">Contact</a>
 					</div>
 				</div>
 			</div>
@@ -54,15 +54,15 @@
 					<form>
   						<div class="form-group">
     						<p><label for="exampleInputName1">Name</label></p>
-    						<input type="name" class="form-control" id="exampleInputName1" aria-describedby="emailHelp" placeholder="Enter Name">
+    						<input type="text" class="form-control" id="exampleInputName1" placeholder="Name">
 					  	</div>
   						<div class="form-group">
     						<p><label for="exampleInputEmail1">Email</label></p>
-    						<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter Email">
+    						<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
   						</div>
   						<div class="form-group">
     						<p><label for="exampleInputMessage1">Message</label></p>
-							<textarea class="message" name="message"></textarea>
+							<textarea class="message" name="message" id="exampleInputMessage1"></textarea>
   						</div>
   						<button type="submit" class="btn btn-primary btn-lg">Submit</button>
 					</form>
