--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 				</div>
 				<div class="col-md-6">
 					<div class="menu">
-						<a class="text-center link" href="index.html" target="">About</a>
-						<a class="text-center link" href="portfolio.html" target="">Portfolio</a>
-						<a class="text-center link" href="contact.html" target="">Contact</a>
+						<a class="text-center link" href="index.html" target="_self">About</a>
+						<a class="text-center link" href="portfolio.html" target="_self">Portfolio</a>
+						<a class="text-center link" href="contact.html" target="_self">Contact</a>
 					</div>
 				</div>
 			</div>
@@ -50,7 +50,7 @@
 				<div class="content">
 					<h2><strong>About Me</strong></h2>
 					<hr class="bigLine">
-					<img class="photo" src="assets/images/FullSizeRender.jpg">
+					<img class="photo" src="assets/images/FullSizeRender.jpg" alt="Me">
 					<p>
 					I can still remember the words uttered from under my dad's bristly mustache, "When are you going to get off that damn computer and get a real job?" I was never one for following the typical archetype for life. I was curious. When I got a new birthday present the first thing I would do was try to modify it, make it cooler or take it apart to see how it worked.
 					</p>
