--- a/portfolio.html
+++ b/portfolio.html
@@ -37,9 +37,9 @@
 				</div>
 				<div class="col-md-6">
 					<div class="menu">
-						<a class="text-center link" href="index.html" target="">About</a>
-						<a class="text-center link" href="portfolio.html" target="">Portfolio</a>
-						<a class="text-center link" href="contact.html" target="">Contact</a>
+						<a class="text-center link" href="index.html" target="_self">About</a>
+						<a class="text-center link" href="portfolio.html" target="_self">Portfolio</a>
+						<a class="text-center link" href="contact.html" target="_self">Contact</a>
 					</div>
 				</div>
 			</div>
